<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>base-logging</name>
  <version>0.1.0</version>
  <description>
  	Provision simple printf style and stream-based logging facilities
  </description>
  <license>New BSD License</license>
  <maintainer email="thomas.roehr@dfki.de">Thomas Roehr</maintainer>
  <author email="steffen.planthaber@dfki.de">Steffen Planthaber</author>
  <author email="thomas.roehr@dfki.de">Thomas Roehr</author>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>base-cmake</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

